python/src/gateway/manifests/gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
    type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
