python/src/gateway/manifests/gateway-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: mp3converter.com # map this hostname to localhost on our local machine, tunnel request to localhost to minikube
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gateway
            port: 
              number: 8080



# vim /etc/hosts
